# scripts-public

./: .gitignore  README.md  image_to_svg  pyproject.toml
.kiro/specs/pdf-text-extraction/: design.md  requirements.md  tasks.md
javascript/: 000928313.raw.json  README.md
javascript/deno-ts/: .gitignore  README.md  README_pdf_extract.md  deno.json  document-ai-pdf-extract-gcloud.ts  document-ai-pdf-extract.ts
javascript/deno-ts/check-pdf/: README.md
javascript/deno-ts/meeting-scheduler/: .env.example  .gitignore  README.md  app.ts  participants.example.csv
javascript/deno-ts/meeting-scheduler/cli/: parser.ts
javascript/deno-ts/meeting-scheduler/clients/: google-calendar.ts  hubspot.ts
javascript/deno-ts/meeting-scheduler/docs/: google-oauth-setup.md  (+1 more)
javascript/deno-ts/pdf-extract/: README.md  STRUCTURE_ANALYSIS.md  app.ts  pdf-extract.ts  pdf-medicine-extractor.ts
javascript/deno-ts/pdf-text-extract/: README.md  app.ts  pdf-text-extract.ts
javascript/deno-ts/prtimes-scraper/: README.md  main.ts
javascript/deno-ts/src/: app.ts  check-pdf-text-simple.ts  check-pdf-text.ts  main.ts
javascript/node-ts/: .gitignore  README.md  package-lock.json  package.json
javascript/node-ts/src/: index.ts  primary-source-harvester.ts  source-origin-analyzer.ts
python/: .env.example  .gitignore  README.md  WHISPER_SETUP.md  fetch_viral_english_posts.py  google_pdf_pipeline.py  google_tts.py  merge_audio.py  open_voice_converter.py  pdf_ocr.py  pdf_ocr_with_layout.py  pdf_to_markdown.py  pdf_to_text.py  pyproject.toml  setup_japanese_ocr.sh  transcribe_faster_whisper.py  transcribe_google_chirp.py  transcribe_kotoba.py  transcribe_whisper.py  voice_convert.py
python/image_to_svg/: __init__.py  __main__.py  auto_vectorize.py  cli.py  converter.py  pipeline_svg.py  pixel_rect_svg.py  svg_optimizer.py  svgify.py
python/site_inspector/: README.md  __init__.py  cli.py  config.py  crawler.py  images.py  models.py  parser.py  reporting.py  sitemap.py  storage.py
python/site_inspector/resources/configs/: sample.yaml
python/tests/: test_fetch_viral_english_posts.py  test_google_tts.py  test_open_voice_converter.py  test_voice_convert.py
python/tests/site_inspector/: test_config.py
python/tests/test_image_to_svg_module/: test_image_to_svg.py
shell/: copy-env-files.sh  export_gcp_secrets.sh  get_gcp_secrets.sh  screenshot_with_interval.sh
(+40 files in other folders)
