[project]
name = "scripts-public"
version = "0.1.0"
description = "Public utility scripts collection"
requires-python = ">=3.9"
dependencies = [
    "pdfminer.six>=20250506",
    "pdfplumber>=0.11.0",
    "PyPDF2>=3.0.0",
    "pymupdf>=1.26.0",
    "svgwrite>=1.4.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python"]
