[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pdfplumber>=0.11.7",
    "ruff>=0.12.2",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "Pillow>=10.2.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "faster-whisper>=1.0.1",
    "pydub>=0.25.1",
    "tqdm>=4.66.0",
    "noisereduce>=3.0.3",
]
